# skeleton-pic

./: .gitignore  CMakeLists.txt  README.md  ompi_comm_addr.c  xtm_mpi_addr.c
bpic2/: Makefile
bpic3/: README  bpic3.c  bpic3.f90  bpush3.f  bpush3_h.f90
gpubpic2/: gpubpic2.c  gpubpic2.f03  gpubpic2.f90
mbpic2/: Makefile  mbpush2.c  mbpush2.f
mpbpic2/: Makefile  README  mpbpic2.c  mpbpic2.f90  mpbpic2_c.f90  mpbpush2.c  pplib2.c  pplib2.f  pplib2.f90  pplib2.h  pplib2_f.c
mppic2/: Makefile  mppic2.c  mppush2.c  omplib_F.c
nanomsg/: local-node.xtm  remote-node.xtm
pbpic2/: Makefile
pbpic2-laptop/xtm/: bpic.xtm  pbpic2-particle.frag  pbpic2-run.xtm  pbpic2-visuals.xtm  pbpic2.app  pbpic2.xtm
pbpic2/xtm/: pbpic2-run.xtm  pbpic2.xtm
pbpic2/xtm/visuals/: pbpic2-vhist.frag  pbpic2-vhist.vert
pic2/: CMakeLists.txt  Makefile  pic2.c
pic2/xtm/: pic2-run.xtm  pic2-visuals.xtm  pic2-xtlang.xtm  pic2.xtm
pic3/: README  pic3.c  pic3.f90  push3.f  push3_h.f90
ppic2/: ppic2.c
ppic2/xtm/: extempore-7095.sh  extempore-7097.sh  extempore-7099.sh  extras.xtm  ppic2-audio.xtm  ppic2-common.xtm  ppic2-run-local.xtm  ppic2-run-remote.xtm  ppic2-run-visnode.xtm  ppic2-run.xtm  ppic2-visuals.xtm  ppic2-xtlang.xtm  ppic2.app  ppic2.xtm
tutorials/smdemo_mpi/: Makefile
tutorials/smdemo_omp/: Makefile  README  comptest.c  fomptest.f90
tutorials/smdemo_sse/: Makefile  README  cssetest.c  fssetest.f90  ssemain.c  ssemain.h
vbpic2/: Makefile  ssebpush2.c  sselib2.c  sselib2_h.f90  vbpic2.c  vbpic2.f03  vbpic2.f90  vbpush2.c  vbpush2.f
vpic2/: Makefile  sselib2.c  sselib2_h.f90  vpic2.c  vpic2.f03  vpic2.f90  vpush2.f
